Edit code  product

--- a/TheGreatGroupModules/Views/Customers/AddCustomer.cshtml
+++ b/TheGreatGroupModules/Views/Customers/AddCustomer.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "ข้อมูลลูกค้าใหม่";
+    ViewBag.Title = "เพิ่มข้อมูลลูกค้าใหม่";
     ViewBag.MainMenu = "ระบบจัดการข้อมูลลูกค้า";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
