--- a/TheGreatGroupModules/Views/Home/Index.cshtml
+++ b/TheGreatGroupModules/Views/Home/Index.cshtml
@@ -21,7 +21,10 @@
                 <li>
                     <div id="customertsparkdash"></div>
                 </li>
-                <li class="text-right"><i class="ti-arrow-up text-success"></i> <span class="counter text-success">659</span></li>
+               
+                <li class="text-right"><i class="ti-arrow-up text-success"></i> <span class=" text-success" id="NewCustomer">
+
+</span></li>
             </ul>
         </div>
     </div>
@@ -32,7 +35,7 @@
                 <li>
                     <div id="sparklinedash2"></div>
                 </li>
-                <li class="text-right"><i class="ti-arrow-up text-purple"></i> <span class="counter text-purple">869</span></li>
+                <li class="text-right"><i class="ti-arrow-up text-purple"></i> <span class="text-purple" id="PriceSaleOfWeek"></span></li>
             </ul>
         </div>
     </div>
@@ -43,7 +46,7 @@
                 <li>
                     <div id="sparklinedash4"></div>
                 </li>
-                <li class="text-right"><i class="ti-arrow-up text-danger"></i> <span class="text-danger">18%</span></li>
+                <li class="text-right"><i class="ti-arrow-up text-danger"></i> <span class="text-danger" id="CustomerReceiptCount"> %</span></li>
             </ul>
         </div>
     </div>
@@ -54,7 +57,7 @@
                 <li>
                     <div id="sparklinedash3"></div>
                 </li>
-                <li class="text-right"><i class="ti-arrow-up text-info"></i> <span class="counter text-info">911</span></li>
+                <li class="text-right"><i class="ti-arrow-up text-info"></i> <span class="counter text-info" id="Closejob"></span></li>
             </ul>
         </div>
     </div>
@@ -88,7 +91,7 @@
                     <ul class="expense-box">
                         <li>
                             <div>
-                                <h2 class="text-danger">ขายออก (บาท)</h2>
+                                <h2 class="text-danger">รับซื้อ (บาท)</h2>
                             </div>
                         </li> 
                     </ul>
@@ -97,8 +100,9 @@
                     <ul class="expense-box">
                         <li>
                             <div>
-                                <h2 class="text-danger">รับซื้อ (บาท)</h2>
+                                <h2 class="text-danger">ขายออก (บาท)</h2>
                             </div>
+                            
                         </li>
                     </ul>
                 </div>
