--- a/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
+++ b/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
@@ -349,8 +349,9 @@
     <script src="../Content/datepicker-th.js"></script>
     <script src="../Sources/Lib/js/jszip.min.js"></script>
     <script src="../Sources/Lib/js/dx.all.js"></script>
+    <script src="../Scripts/src/init.js"></script>
     @RenderSection("scripts", required: false)
-
+   
    
 </body>
 </html>
