--- a/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
+++ b/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
@@ -265,8 +265,8 @@
                     <li>
                         <a href="javascript:void(0)" class="waves-effect"><i class="fa fa-user" ></i><span class="hide-menu"> ระบบจัดการพนักงาน<span class="fa arrow"></span></span></a>
                         <ul class="nav nav-second-level">
-                            <li> <a href="javascript:void(0)"><i  class="fa fa-list-alt" ></i><span class="hide-menu"> รายชื่อพนักงานทั้งหมด</span></a> </li>
-                            <li> <a href="javascript:void(0)"><i class="fa fa-map-marker" ></i><span class="hide-menu"> ระบบติดตามพนักงาน</span></a> </li>
+                            <li> <a href="../Staffs/ListStaff"><i class="fa fa-list-alt"></i><span class="hide-menu"> รายชื่อพนักงานทั้งหมด</span></a> </li>
+                            <li> <a href="../Staffs/StaffLocation"><i class="fa fa-map-marker"></i><span class="hide-menu"> ระบบติดตามพนักงาน</span></a> </li>
                         </ul>
                     </li>
                     <li>
