--- a/TheGreatGroupModules/Views/Customers/Contract.cshtml
+++ b/TheGreatGroupModules/Views/Customers/Contract.cshtml
@@ -12,129 +12,78 @@
             <li class="active">@ViewBag.Title</li>
         </ol>
     </div>
+    <!-- /.page title -->
     <a href="javascript:history.back();" class="btn btn-default pull-right m-l-20 hidden-xs hidden-sm waves-effect waves-light"><i class="fa fa-mail-reply"></i> ย้อนกลับ</a>
 </div>
 <div class="row">
+
     <div class="col-lg-12 ">
 
         <div class="white-box">
 
-            <h3 class="m-b-0 m-t-0"> <i class="fa fa-search"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
+            <h3 class="m-b-0 m-t-0"> <i class="fa  fa-book"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
             <hr>
             <div class="row">
                 <div class="col-md-12">
                     <div class="pull-left">
                         <address>
-                            <h4> &nbsp;<b>ชื่อลูกค้า : นางวิไล สุดงาม</b></h4>
-                            <p class="text-muted m-l-5">
-                                สำนักงาน : 555/171 หมู่ที่ 1 ตำบลบางแก้ว อำเภอเมืองสมุทรสงคราม จังหวัดสมุทรสงคราม
-                                <br /> เลขผู้เสียภาษีอากร : 0 7555 6000 0349
-                            </p>
+                            <div id="customerName"></div>
+                            <div id="customerAddress"></div>
                         </address>
                     </div>
                     <div class="pull-right text-right">
                         <address>
-                            <p class="m-t-10"><b>วันที่เปิด :</b> <i class="fa fa-calendar"></i> 25 กุมภาพันธ์ 2561</p>
-                            @*<p><b>วันที่ครบกำหนด :</b> <i class="fa fa-calendar"></i>  15 พฤษภาคม 2561</p>*@
                             <p><b> การชำระเงิน :</b>   เงินสด</p>
                         </address>
                     </div>
                 </div>
             </div>
+            
+
             <div class="row">
                 <div class="col-md-12">
-                    <br>
-                    <div class="clearfix"></div>
-                    <form class="form-horizontal">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="inputPassword3" class="col-sm-4 control-label">เลขที่สัญญา</label>
-                                    <div class="col-sm-8">
-                                        <input type="text" class="form-control" id="CustomerIdCard" placeholder="">
-                                    </div>
+                    <h4 class="m-b-0">  ข้อมูลผู้ซื้อร่วม </h4><br>
+                    <div id="form4"></div><br>
+                     
+                    <hr>
+                    <h4 class="m-b-0">  ข้อมูลผู้ค้ำประกัน </h4><br>
+                    <div id="form1"></div><br>
+                    <div id="form2"></div>
+                        <hr>
+                    <h4 class="m-b-0">  ข้อมูลเงื่อนไขสัญญา </h4><br>
+                    <div id="form"></div>
+                    
+                    <div class="text-right">
+                        <a class="btn btn-info" onclick="Submit_Click()"> <i class="fa fa-save"></i> บันทึก </a>
+                    </div>
+    <hr>
+    <h4 class="m-b-0">  ข้อมูลสินค้า </h4><br>
+    <div id="loadIndicator"></div>    <div id="gridData"></div>
+</div>
+                <div id="myPopup"><p>Popup content</p></div>
+            </div>
 
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="inputPassword3" class="col-sm-4 control-label">เลขที่ใบกำกับภาษี</label>
-                                    <div class="col-sm-8">
-                                        <input type="text" class="form-control" id="CustomerIdCard" placeholder="">
-                                    </div>
-                                    
-                                </div>
-                            </div>
-                            
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="inputEmail3" class="col-sm-4 control-label">จำนวนงวด : </label>
-                                    <div class="col-sm-3">
-                                        <input type="text" class="form-control" id="CustomerMobile" placeholder="" value="45">
-                                    </div>
-                                    <label class="col-sm-3 control-label text-right"> งวด</label>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="inputPassword3" class="col-sm-3 control-label">งวดละ :</label>
-                                    <div class="col-sm-4">
-                                        <input type="text" class="form-control" id="CustomerIdCard" placeholder="">
-                                    </div>
-                                    <label for="inputEmail3" class="col-sm-3 control-label text-left">บาท </label>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="inputPassword3" class="col-sm-4  control-label">งวดสุดท้าย :</label>
-                                    <div class="col-sm-4">
-                                        <input type="text" class="form-control" id="CustomerIdCard" placeholder="">
-                                    </div>
-                                    <label for="inputEmail3" class="col-sm-3 control-label text-left">บาท </label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-
-                            <div class="col-md-4">
-                                
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="inputEmail3" class="col-sm-3 control-label">ดอกเบี้ย : </label>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control" id="CustomerMobile" placeholder="" value="20">
-                                    </div>
-                                    <label for="inputEmail3" class="col-sm-3 control-label"> % </label>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="inputPassword3" class="col-sm-4 control-label">วันที่ผ่อนชำระ</label>
-                                    <div class="col-sm-6">
-                                        <select class="form-control" id="CustomerTitleName">
-                                            <option value="นาย">จันทร์-ศุกร์</option>
-                                            <option value="นางสาว">ทุกวันทำการ</option>
-                                        </select>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-
-                    </form>
+            <div class="row">
+                <div class="col-md-12">
 
                     <hr>
                     <div class="text-right">
 
                         <a id="print" class="btn btn-default btn-outline" href="javascript:history.back();"> <span><i class="fa fa-mail-reply"></i> ย้อนกลับ</span> </a>
-                        <a class="btn btn-info" href="\Customers/Contract"> <i class="fa fa-save"></i> บันทึก </a>
+                    
+                        <a class="btn btn-success" onclick="PrintCard()"> <i class="fa fa-print"></i> พิมพ์บัตรลูกค้า </a>
+                        <a class="btn btn-success" onclick="PrintContract()"> <i class="fa fa-print"></i> พิมพ์สัญญา </a>
                     </div>
                 </div>
             </div>
 
         </div>
+
     </div>
+   
 </div>
+@section Scripts {
+@Scripts.Render("../Scripts/src/add_contract.js")
+
+
+}
