Contract Report Updated

--- a/TheGreatGroupModules/Report/ContractBookReport.rdlc
+++ b/TheGreatGroupModules/Report/ContractBookReport.rdlc
@@ -2768,7 +2768,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>ลงชื่อ.................................................................พยาน</Value>
+                <Value>ลงชื่อ.................................................................ผู้ซื้อ</Value>
                 <Style>
                   <FontFamily>Angsana New</FontFamily>
                   <FontSize>14pt</FontSize>
