--- a/TheGreatGroupModules/Views/Setting/ListZone.cshtml
+++ b/TheGreatGroupModules/Views/Setting/ListZone.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "รายชื่อพนักงานทั้งหมด";
-    ViewBag.MainMenu = "ระบบจัดการพนักงาน";
+    ViewBag.Title = "กำหนดพื้นที่ทำงาน";
+    ViewBag.MainMenu = "ตั้งค่าระบบ";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
 <div class="row bg-title">
@@ -20,6 +20,8 @@
 
         <div class="white-box">
 
+
+            <!-- ใส่ Grid-->
 
 
         </div>
