--- a/TheGreatGroupModules/Views/Staffs/ListStaffRole.cshtml
+++ b/TheGreatGroupModules/Views/Staffs/ListStaffRole.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "รายชื่อพนักงานทั้งหมด";
+    ViewBag.Title = "จัดการกลุ่มพนักงาน";
     ViewBag.MainMenu = "ระบบจัดการพนักงาน";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
