--- a/TheGreatGroupModules/Views/Staffs/ListStaff.cshtml
+++ b/TheGreatGroupModules/Views/Staffs/ListStaff.cshtml
@@ -19,9 +19,43 @@
     <div class="col-lg-12 ">
 
         <div class="white-box">
+            <a onclick="NewZone()" class="btn btn-info pull-right"><i class="fa fa-plus"></i> เพิ่มพนักงาน</a>
+            <h3 class="m-b-0 m-t-0"> <i class="fa fa-search"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
+            <hr>
 
-
+            <div id="gridListStaffs"></div>
 
         </div>
     </div>
 </div>
+
+
+@section Scripts {
+    @Scripts.Render("../Scripts/src/manage_staff.js")
+    <script type="text/javascript">
+
+        $(function () {
+
+            $.ajax({
+                url: '../Staffs/GetStaffData?staffID=0&staffroleId=0',
+                type: 'GET',
+                contentType: 'application/json',
+                success: function (data) {
+
+                    Load_DataGrid(data);
+                    // เรียก data grid เพื่อใส่ข้อมูล
+                    //console.log(data);
+
+                },
+                error: function () {
+                    console.log("error");
+                }
+            });
+
+
+        });
+
+
+
+    </script>
+}
