api add/edit zone

--- a/TheGreatGroupModules/Views/Home/LogIn.cshtml
+++ b/TheGreatGroupModules/Views/Home/LogIn.cshtml
@@ -19,8 +19,8 @@
     </div>
     <div class="new-login-box">
         <div class="white-box">
-            <h3 class="box-title m-b-0" style="font-weight:700;">ระบบจัดการสินเชื่อ </h3>
-            <small>บริษัท เดอะเกรทกรุ๊ป จำกัด</small>
+            <h3 class="box-title m-b-0" style="font-weight:700;">บริษัท เดอะเกรทกรุ๊ป จำกัด</h3>
+            <small>เข้าสู่ระบบ</small>
             <form class="form-horizontal new-lg-form" id="loginform" action="LogIn">
 
                 <div class="form-group  m-t-20">
